welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: not found: value hauteur
for (i <- 1 to hauteur)
               ^Array1:9: error: not found: value getMotif
getMotif();
^